--- a/app/src/main/res/layout/layout_profile.xml
+++ b/app/src/main/res/layout/layout_profile.xml
@@ -12,11 +12,11 @@
         android:layout_height="140dp"
         android:layout_marginVertical="32dp"
         android:scaleType="centerCrop"
-        tools:src="@tools:sample/avatars"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/RoundedImageView" />
+        app:shapeAppearanceOverlay="@style/RoundedImageView"
+        tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/tv_username_title"
@@ -37,13 +37,10 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_username_title"
         tools:hint="@string/text_username_profile">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:focusable="false"
             android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -52,9 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:clickable="false"
-        android:cursorVisible="false"
-        android:focusable="false"
+        android:enabled="false"
         android:text="@string/text_profile_email"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,13 +64,11 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_email_title"
         tools:hint="@string/text_email_value">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:focusable="false"
+            android:enabled="false"
             android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -99,13 +92,11 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_phone_number_title"
         tools:hint="@string/text_phone_number_value">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:focusable="false"
+            android:enabled="false"
             android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
