--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -64,15 +64,18 @@
             android:id="@+id/et_text_note"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:padding="8dp"
             android:layout_marginHorizontal="8dp"
-            android:hint="@string/text_hint_note"
+            android:layout_marginTop="8dp"
             android:background="@drawable/bg_edit_text_secondary"
+            android:hint="@string/text_hint_note"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:maxLines="3"
+            android:padding="8dp"
             android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_menu_img"
-            app:layout_constraintTop_toBottomOf="@id/line_cart"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/line_cart" />
 
         <include
             android:id="@+id/layout_item_quantity"
