--- a/app/src/main/res/layout/layout_button_order.xml
+++ b/app/src/main/res/layout/layout_button_order.xml
@@ -31,7 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/btn_add_to_cart"
+        android:id="@+id/btn_order"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
