--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <color name="tertiary_container">#3c4c28</color>
     <color name="on_tertiary_container">#d6e9b9</color>
 
-    <color name="error">#ffb4ab</color>
+    <color name="error">#FF1B00</color>
     <color name="on_error">#EF0A15</color>
     <color name="error_container">#93000a</color>
     <color name="on_error_container">#ffdad6</color>
